--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsx watch index.ts"
+    "start": "dotenv -e .env -- tsx watch index.ts"
   },
   "keywords": [],
   "author": "",
