--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "fastify": "^4.19.2",
     "kysely": "^0.26.0",
     "pg": "^8.11.1",
