--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@fastify/static": "^6.10.2",
     "fastify": "^4.19.2",
+    "fastify-file-upload": "^4.0.0",
     "kysely": "^0.26.0",
     "pg": "^8.11.1",
     "prisma": "3.15.2",
