--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fastify": "^4.19.2",
     "fastify-file-upload": "^4.0.0",
     "kysely": "^0.26.0",
+    "lodash.omit": "^4.5.0",
     "pg": "^8.11.1",
     "prisma": "3.15.2",
     "prisma-kysely": "1.0.8",
@@ -22,6 +23,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/lodash.omit": "^4.5.7",
     "@types/node": "^20.4.1",
     "@types/pg": "^8.10.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
