--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "fastify": "^4.19.2",
     "fastify-file-upload": "^4.0.0",
     "kysely": "^0.26.0",
+    "lodash.groupby": "^4.6.0",
     "lodash.omit": "^4.5.0",
+    "lodash.uniqby": "^4.7.0",
     "pg": "^8.11.1",
     "sharp": "^0.32.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.omit": "^4.5.7",
+    "@types/lodash.uniqby": "^4.7.7",
     "@types/node": "^20.4.1",
     "@types/pg": "^8.10.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
