--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.388.0",
     "@fastify/cors": "^8.3.0",
     "@fastify/static": "^6.10.2",
     "fastify": "^4.19.2",
