--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.388.0",
     "@elysiajs/cors": "^0.6.0",
+    "@elysiajs/swagger": "^0.6.2",
     "@fastify/cors": "^8.3.0",
     "@fastify/static": "^6.10.2",
     "@sinclair/typebox": "^0.31.14",
