--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.388.0",
+    "@aws-sdk/lib-storage": "^3.409.0",
+    "@aws-sdk/s3-request-presigner": "^3.409.0",
     "@elysiajs/cors": "^0.6.0",
     "@elysiajs/swagger": "^0.6.2",
     "@fastify/cors": "^8.3.0",
