--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
     "import/first": "error",
     "import/named": "off",
     "import/newline-after-import": "error",
-    "import/no-cycle": "error",
+    "import/no-cycle": "off",
     "import/no-self-import": "error",
     "import/no-duplicates": "error",
     "import/no-extraneous-dependencies": "off",
