feat: delete asset route

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@aws-sdk/client-s3": "^3.388.0",
     "@aws-sdk/lib-storage": "^3.409.0",
     "@aws-sdk/s3-request-presigner": "^3.409.0",
-    "@elysiajs/cors": "^0.6.0",
-    "@elysiajs/swagger": "^0.6.2",
+    "@elysiajs/cors": "0.6.0",
+    "@elysiajs/swagger": "0.6.0",
     "@sinclair/typebox": "^0.31.14",
-    "elysia": "^0.6.23",
+    "elysia": "0.6.24",
     "kysely": "^0.26.3",
     "lodash.groupby": "^4.6.0",
     "lodash.omit": "^4.5.0",
