--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "module": "index.ts",
   "scripts": {
-    "start": "bun --watch index.ts"
+    "start": "bun --watch index.ts",
+    "build": "bun build index.ts"
   },
   "keywords": [],
   "author": "",
