--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "elysia": "0.6.24",
     "kysely": "^0.26.3",
     "lodash.groupby": "^4.6.0",
+    "lodash.merge": "^4.6.2",
     "lodash.omit": "^4.5.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
@@ -32,6 +33,7 @@
   ],
   "devDependencies": {
     "@types/lodash.groupby": "^4.6.7",
+    "@types/lodash.merge": "^4.6.8",
     "@types/lodash.omit": "^4.5.7",
     "@types/lodash.uniq": "^4.5.7",
     "@types/lodash.uniqby": "^4.7.7",
