--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.409.0",
     "@elysiajs/cors": "0.6.0",
     "@elysiajs/swagger": "0.6.0",
+    "@prisma/client": "latest",
     "@sinclair/typebox": "^0.31.14",
     "elysia": "0.6.24",
     "kysely": "^0.26.3",
