--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "pg": "^8.11.1",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "stytch": "^9.0.5"
   },
   "trustedDependencies": [
     "sharp",
