--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "latest",
     "@sinclair/typebox": "^0.31.14",
     "elysia": "0.6.24",
+    "elysia-clerk": "^0.2.2",
     "kysely": "^0.26.3",
     "lodash.groupby": "^4.6.0",
     "lodash.merge": "^4.6.2",
