--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.388.0",
     "@aws-sdk/lib-storage": "^3.409.0",
     "@aws-sdk/s3-request-presigner": "^3.409.0",
+    "@clerk/clerk-sdk-node": "^4.12.18",
     "@elysiajs/cors": "0.6.0",
     "@elysiajs/swagger": "0.6.0",
     "@prisma/client": "latest",
