refactor: jwt verify and after handler

--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@aws-sdk/s3-request-presigner": "^3.409.0",
     "@clerk/clerk-sdk-node": "^4.12.18",
     "@elysiajs/cors": "0.6.0",
-    "@elysiajs/static": "^0.7.1",
-    "@elysiajs/swagger": "0.6.0",
     "@prisma/client": "latest",
     "@react-email/components": "^0.0.10",
     "@react-email/tailwind": "^0.0.12",
     "@sinclair/typebox": "^0.31.14",
     "elysia": "0.6.24",
-    "elysia-clerk": "^0.2.2",
+    "jose": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5",
     "kysely": "^0.26.3",
     "lodash.groupby": "^4.6.0",
     "lodash.merge": "^4.6.2",
@@ -43,6 +43,8 @@
     "elysia"
   ],
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jwk-to-pem": "^2.0.3",
     "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.merge": "^4.6.8",
     "@types/lodash.omit": "^4.5.7",
