--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react": "^18.2.0",
     "react-email": "^1.9.5",
     "resend": "^1.1.0",
-    "sharp": "^0.32.1"
+    "sharp": "^0.33.0-alpha.11"
   },
   "trustedDependencies": [
     "sharp",
