--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "bun --watch index.ts",
     "build": "bun build index.ts",
     "email": "email dev",
-    "migrate:dev": "bunx prisma migrate dev --name dev_migration && bun run kysely-codegen"
+    "generate-schema": "bun run kysely-codegen"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,6 @@
     "@aws-sdk/s3-request-presigner": "^3.409.0",
     "@clerk/clerk-sdk-node": "^4.12.18",
     "@elysiajs/cors": "0.6.0",
-    "@prisma/client": "latest",
     "@react-email/components": "^0.0.10",
     "@react-email/tailwind": "^0.0.12",
     "@sinclair/typebox": "^0.31.14",
@@ -55,6 +54,7 @@
     "@types/react": "^18.2.33",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
+    "dbmate": "^2.7.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
