refactor: mentioned in documents route

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.11.1",
     "react": "^18.2.0",
     "react-email": "^1.9.5",
+    "remirror": "^2.0.37",
     "resend": "^1.1.0",
     "sharp": "^0.33.0-alpha.11"
   },
