--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "module": "index.ts",
   "scripts": {
-    "start": "bun --watch index.ts",
-    "build": "bun build index.ts --target=bun --outdir ./dist --minify",
+    "start:dev": "bun --watch index.ts",
+    "start:": "bun dist/index.js",
+    "build": "bun build index.ts --target=bun --outdir ./dist",
     "email": "email dev",
     "generate-schema": "bun run kysely-codegen"
   },
