--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "bun --watch index.ts",
     "start:": "bun dist/index.js",
-    "build": "bun build index.ts --target=node --outdir ./dist",
+    "build": "tsc",
     "email": "email dev",
     "generate-schema": "bun run kysely-codegen"
   },
