--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start:dev": "bun --watch index.ts",
     "start:": "bun dist/index.js",
-    "build": "bun index.ts",
-    "build:test": "bun run kysely-codegen && tsc",
+    "build": "bun run kysely-codegen && tsc",
     "email": "email dev",
     "generate-schema": "bun run kysely-codegen"
   },
