--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "bun --watch index.ts",
     "start:": "bun dist/index.js",
-    "build": "npm run kysely-codegen && tsc",
+    "build": "npm i -g kysely-codegen && bun run kysely-codegen && tsc",
     "email": "email dev",
     "generate-schema": "bun run kysely-codegen"
   },
