--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "bun index.ts",
     "build": "bun run generate-schema",
     "email": "email dev",
-    "generate-schema": "bun run kysely-codegen"
+    "generate-schema": "bun run kysely-codegen",
+    "lint": "eslint '*.{ts,tsx}' --fix --report-unused-disable-directives --max-warnings 0",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -64,6 +66,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
     "kysely-codegen": "^0.10.1",
     "prettier": "^2.8.0",
     "typescript": "^5.1.6"
