--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@aws-sdk/lib-storage": "^3.409.0",
     "@aws-sdk/s3-request-presigner": "^3.409.0",
     "@clerk/clerk-sdk-node": "^4.12.18",
-    "@elysiajs/cors": "0.6.0",
+    "@elysiajs/cors": "latest",
     "@react-email/components": "^0.0.10",
     "@react-email/tailwind": "^0.0.12",
     "@sinclair/typebox": "^0.31.14",
-    "elysia": "0.6.24",
+    "elysia": "latest",
     "jose": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
