--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-email": "^1.9.5",
     "remirror": "^2.0.37",
     "resend": "^1.1.0",
-    "sharp": "^0.33.0"
+    "sharp": "v0.33.0-rc.2"
   },
   "trustedDependencies": [
     "sharp",
