--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jose": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
-    "kysely": "^0.26.3",
+    "kysely": "latest",
     "lodash.groupby": "^4.6.0",
     "lodash.merge": "^4.6.2",
     "lodash.omit": "^4.5.0",
