--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "index.ts",
   "scripts": {
     "start:dev": "bun --watch index.ts",
-    "start": "bun index.ts",
+    "start": "bun run build && bun index.ts",
     "build": "bun run generate-schema",
     "email": "email dev",
     "generate-schema": "bunx dbmate migrate && bun run kysely-codegen",
