--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-email": "^1.9.5",
     "remirror": "^2.0.37",
     "resend": "^1.1.0",
-    "sharp": "^0.33.0"
+    "sharp": "^0.33.0",
+    "svix": "^1.20.0"
   },
   "trustedDependencies": [
     "elysia",
