--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@react-email/components": "^0.0.10",
     "@react-email/tailwind": "^0.0.12",
     "@sinclair/typebox": "^0.31.14",
-    "elysia": "0.8.8",
+    "elysia": "^1.0.0",
     "elysia-rate-limit": "^2.0.1",
     "jose": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -38,7 +38,7 @@
     "lodash.uniqby": "^4.7.0",
     "pg": "^8.11.1",
     "react": "^18.2.0",
-    "react-email": "^1.9.5",
+    "react-email": "^2.0.0",
     "resend": "^1.1.0",
     "sharp": "^0.33.0",
     "svix": "^1.20.0"
