--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
     "import/extensions": ["error", "never"],
     "import/prefer-default-export": "off",
     "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
+    "no-console": [1, { "allow": ["error"] }],
     "prettier/prettier": [
       "error",
       {
