--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@aws-sdk/client-s3": "^3.388.0",
     "@aws-sdk/lib-storage": "^3.409.0",
     "@aws-sdk/s3-request-presigner": "^3.409.0",
-    "@clerk/clerk-sdk-node": "^4.12.18",
+    "@clerk/clerk-sdk-node": "^5.0.3",
     "@elysiajs/cors": "latest",
     "@react-email/components": "^0.0.10",
     "@react-email/tailwind": "^0.0.12",
@@ -39,6 +39,7 @@
     "pg": "^8.11.1",
     "react": "^18.2.0",
     "react-email": "^2.0.0",
+    "redis": "^4.6.13",
     "resend": "^1.1.0",
     "sharp": "^0.33.0",
     "svix": "^1.20.0"
