--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/s3-request-presigner": "^3.409.0",
     "@clerk/clerk-sdk-node": "^5.0.3",
     "@elysiajs/cors": "latest",
+    "@elysiajs/cron": "0.8.0",
     "@react-email/components": "^0.0.10",
     "@react-email/tailwind": "^0.0.12",
     "@sinclair/typebox": "^0.31.14",
