--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@aws-sdk/client-s3": "^3.388.0",
     "@aws-sdk/lib-storage": "^3.409.0",
     "@aws-sdk/s3-request-presigner": "^3.409.0",
-    "@clerk/clerk-sdk-node": "^5.0.3",
     "@elysiajs/cors": "latest",
     "@elysiajs/cron": "0.8.0",
     "@react-email/components": "^0.0.10",
@@ -39,8 +38,7 @@
     "react-email": "^2.0.0",
     "redis": "^4.6.13",
     "resend": "^1.1.0",
-    "sharp": "^0.33.0",
-    "svix": "^1.20.0"
+    "sharp": "^0.33.0"
   },
   "trustedDependencies": [
     "elysia",
@@ -59,7 +57,6 @@
     "@types/react": "^18.2.33",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "dbmate": "^2.7.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
