--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "@aws-sdk/client-s3": "^3.388.0",
     "@aws-sdk/lib-storage": "^3.409.0",
     "@aws-sdk/s3-request-presigner": "^3.409.0",
-    "@elysiajs/cors": "latest",
-    "@elysiajs/cron": "0.8.0",
+    "@elysiajs/cors": "^1.1.0",
+    "@elysiajs/cron": "^1.1.0",
+    "@elysiajs/jwt": "^1.1.0",
     "@react-email/components": "^0.0.10",
     "@react-email/tailwind": "^0.0.12",
     "@sinclair/typebox": "^0.31.14",
-    "elysia": "0.8.8",
-    "elysia-rate-limit": "^2.0.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
+    "elysia": "^1.1.3",
     "kysely": "^0.27.4",
     "lodash.groupby": "^4.6.0",
     "lodash.merge": "^4.6.2",
