--- a/package.json
+++ b/package.json
@@ -70,10 +70,13 @@
     "kysely-codegen": "^0.10.1",
     "lint-staged": "^15.2.5",
     "prettier": "^2.8.0",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.1.6"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "bash -c tsc -p ./tsconfig.json --noEmit",
-    "*.{ts,tsx,html}": "eslint --fix --report-unused-disable-directives --max-warnings 0"
+    "*.{ts,tsx}": [
+      "eslint --fix --report-unused-disable-directives --max-warnings 0",
+      "bash -c tsc -p ./tsconfig.json --noEmit"
+    ]
   }
 }
