--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.388.0",
-    "@aws-sdk/s3-request-presigner": "^3.409.0",
     "@elysiajs/cors": "^1.1.0",
     "@elysiajs/cron": "^1.1.0",
     "@react-email/components": "^0.0.10",
@@ -37,12 +35,10 @@
     "react-email": "^2.0.0",
     "redis": "^4.6.13",
     "resend": "^1.1.0",
-    "sharp": "^0.33.0",
     "tweetnacl": "^1.0.3"
   },
   "trustedDependencies": [
-    "elysia",
-    "sharp"
+    "elysia"
   ],
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
