--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "elysia": "^1.1.3",
+    "elysia-rate-limit": "^4.1.0",
     "kysely": "^0.27.4",
     "lodash.groupby": "^4.6.0",
     "lodash.merge": "^4.6.2",
