--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sinclair/typebox": "^0.31.14",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "elkjs": "^0.9.3",
     "elysia": "^1.1.3",
     "elysia-rate-limit": "^4.1.0",
     "kysely": "^0.27.4",
